# rover_simulink_ros2_mujoco

./: .gitignore
.devcontainer/: devcontainer.json
docker/: Dockerfile
simulink/: INAIL_ROVER.slx  risolutore_cinematica.m  ros2_symulink_ettorone_mujoco.slx
src/: -home-ema-Desktop-work-rover-src-.txt
src/ettorone_mujoco_cpp/: CMakeLists.txt  MUJOCO_LOG.TXT  package.xml
src/ettorone_mujoco_cpp/include/ettorone_mujoco_cpp/: mj_ettorone_node.hpp
src/ettorone_mujoco_cpp/log/: latest_build
src/ettorone_mujoco_cpp/model/: ettorone.xml  ettorone.xml.xacro  params.xacro  rover.xml  wheel_corner.xacro
src/ettorone_mujoco_cpp/src/: main.cpp  mj_ettorone_node.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/joystick/: CMakeLists.txt  package.xml
src/joystick/launch/: joystick.launch.py
src/matlab_msg_gen/glnxa64/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
src/matlab_msg_gen/glnxa64/install/include/interfaces/: visibility_control.h
src/matlab_msg_gen/glnxa64/install/include/interfaces/interfaces/msg/: float32_array12.h  float32_array12.hpp  float32_array8.h
src/matlab_msg_gen/glnxa64/install/share/ament_index/resource_index/parent_prefix_path/: interfaces
src/matlab_msg_gen/glnxa64/install/share/interfaces/: package.sh
src/matlab_msg_gen/glnxa64/install/share/interfaces/cmake/: export_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
src/matlab_msg_gen/glnxa64/install/share/interfaces/msg/: Float32Array12.json  Float32Array8.idl
src/matlab_msg_gen/glnxa64/log/: latest_build
src/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
src/matlab_msg_gen/glnxa64/src/interfaces/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/interfaces/msg/: Float32Array8.msg
src/matlab_msg_gen/glnxa64/src/interfaces/src/: interfaces_Float32Array12_message.cpp  interfaces_Float32Array8_message.cpp
(+17 files in other folders)
